--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,10 @@
 [tool.poetry]
 name = "pytastic"
-version = "0.1.0"
+version = "0.1.1"
 description = "A dependency-free JSON validation library using TypedDict and Annotated"
 authors = ["Tersoo <tersoo@example.com>"]
 readme = "README.md"
-repository = "https://github.com/tersoo/pytastic"
+repository = "https://github.com/rayattack/pytastic"
 packages = [{include = "pytastic"}]
 
 [tool.poetry.dependencies]
